fixes to offline

--- a/html/Client/ViewerOffline.html
+++ b/html/Client/ViewerOffline.html
@@ -9,8 +9,8 @@
 		window.offline = true;
 	</script>
 	
-	<script type="text/javascript">window.jQuery || document.write('<script type="text/javascript" src="/static/jquery-min.js">\x3C/script>');</script>	
-	<script src="/static/jquery-ui.min.js"></script>
+	<script type="text/javascript">window.jQuery || document.write('<script type="text/javascript" src="/js/jquery-min.js">\x3C/script>');</script>	
+	<script src="/js/jquery-ui.min.js"></script>
 	<script src="/js/Offline/Header_Offline.js"></script>
 	<script src="/js/Offline/Viewer_Offline.js"></script>
 </head>
