implemented changes from first round of beta testing feedback: Story viewer designer resizing, stroy preview additional display and delete, story authoring new fields and features, warning messages and loading indicator

--- a/html/Client/Editor/Cover.html
+++ b/html/Client/Editor/Cover.html
@@ -11,6 +11,10 @@
 			<div class="quarter"><label>Author</label></div>
 			<div class="three-quarters"><input id="author-input" type="text" name="author" value="<%- author %>"></div>
 		</div>
+		<div class="half">
+			<div class="quarter"><label>Artist</label></div>
+			<div class="three-quarters"><input id="artist-input" type="text" name="artist" value="<%- artist %>"></div>
+		</div>
 	</div>
 </div>
 <button id="save-cover" class="save-button" <%- unsavedChanges ? '' : 'disabled' %>>Save Changes</button>
