--- a/html/Client/StoryViewer.html
+++ b/html/Client/StoryViewer.html
@@ -7,5 +7,6 @@
 	</div>
 	<div id="page-controller">
 	</div>
+	<a class="story-game-button" href="./Games?storyId=<%- story.id %>"></a>
 	<button id="fullscreen-toggle"></button>
 </div>
