--- a/html/Client/Header.html
+++ b/html/Client/Header.html
@@ -23,14 +23,14 @@
 				<% } %>
 			</span>
 		</div>
-		<div class="" id="nav-search">
-			<form action="./Search">
-				<input id="nav-serach-input" type="text" name="search" />
-				<input id="nav-submit-input" type="submit" value="" />
-			</form>
-		</div>
 		<% if(user){ %>
 			<div class=""><a href="./Edit"><button class="nav-icon" id="nav-edit-icon"></button></a></div>
 		<% } %>
+		<div class="" id="nav-search">
+			<form action="./Search">
+				<input id="nav-serach-input" type="text" name="search" style="<% if(!user){ %>margin-right: 65px; <% } %>"/>
+				<input id="nav-submit-input" type="submit" value="" style="<% if(!user){ %>margin-right: 65px; <% } %>"/>
+			</form>
+		</div>
 	</nav>
 <% } %>
