--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -21,6 +21,7 @@
 				<button id="social-likes" class="social">Likes <span id="likes"><%- story.metadata.likes %></span></button>
 				<button id="social-save" class="social socialExport">Save</button>
 				<button id="social-share" class="social socialExport">Share</button>
+				<button id="social-export" class="social socialExport">Export</button>
 			</div>
 		<% } %>
 		<div id="description">
