Continued work on export tool and startings of the video compression feature

--- a/html/Client/StoryViewer_Page.html
+++ b/html/Client/StoryViewer_Page.html
@@ -17,7 +17,11 @@
 		</div>
 	<% } else { %>
 		<div class="video-container text-open">
-			<video src="<%- page.video[currentSignLanguage] %>" controls loop autoplay muted></video>
+			<% if(videoSaver == true){ %>
+				<video src="<%- page.video[currentSignLanguage] %>" controls loop autoplay muted id="low-quailty"></video>
+			<% } else{ %>
+				<video src="<%- page.video[currentSignLanguage] %>" controls loop autoplay muted id="high-quailty"></video>
+			<% } %>
 		</div>
 		<div id="text-toggle-container" class="text-open">
 			<button id="text-toggle"></button>
