--- a/html/Client/Viewer.html
+++ b/html/Client/Viewer.html
@@ -22,6 +22,7 @@
 				<button id="social-save" class="social socialExport">Save</button>
 				<button id="social-share" class="social socialExport">Share</button>
 				<button id="social-export" class="social socialExport">Export</button>
+				<span id="displayExportLoader"></span>
 			</div>
 		<% } %>
 		<div id="description">
